# pyrag

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/PRPs/issues/completed/: issue-16.md  issue-17.md  issue-18.md  issue-19.md  issue-20.md  issue-25.md
.github/workflows/: ghar-issue-command-executor.yml  python-web-preview.yml  test.yml
.opencode/commands/: ghar-issue-fix.md  ghar-maintainability-review.md
scripts/: legacy_pyrag.py
src/pyrag/: __init__.py  __main__.py  cli.py  config.py  mcp.py  pipeline.py  rag.py  storage.py  utils.py  web.py
src/pyrag/templates/: index.html  index_new.html
src/pyrag/templates/static/: site.webmanifest
tests/: test_security.py  test_system.py  test_unit.py  test_utils.py  test_web.py
